commit with no luck to fixing the water flowing logics :)